# faceshapes

./: .gitignore  CHANGELOG.md  README.md  inference.py  mise.toml  pyproject.toml  requirements.txt
.agents/.archives_trash/TECH_ARCH/: README.md  TECHNOLOGY_ARCHITECTURE.md
.agents/.archives_trash/TECH_ARCH/.github/workflows/: ci.example.yml  release.example.yml
.agents/.archives_trash/TECH_ARCH/examples/: CHANGELOG.example.md  mise.example.toml  pyproject.example.toml  tool.spec.example
.agents/.archives_trash/TECH_ARCH/scripts/: Invoke-Bump-Tool-Version.example.ps1  Invoke-Clean-Tool-Build.example.ps1
.github/workflows/: ci.yml  release.yml
examples/: README.md
faceshapes/: __init__.py  __main__.py
references/: PyTorch_Serialization_Semantics.md
scripts/: Add-Faceshapes-FileExplorer.reg  Invoke-Build-Faceshapes-Wheels.ps1
